Closed Bug 1911225 Opened 2 years ago Closed 1 year ago

"New Subfolder..." and "Rename" Do Not Work (since spamFolderURI/spamActionTargetFolder points to removed account)

Categories

(Thunderbird :: Folder and Message Lists, defect, P2)

Thunderbird 128
defect

Tracking

(thunderbird_esr128+ fixed, thunderbird130 affected, thunderbird134 affected)

RESOLVED FIXED
135 Branch
Tracking Status
thunderbird_esr128 + fixed
thunderbird130 --- affected
thunderbird134 --- affected

People

(Reporter: carodri2, Assigned: mkmelin)

References

(Blocks 1 open bug)

Details

(Keywords: regression, regressionwindow-wanted, triaged)

Attachments

(2 files)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/126.0.0.0 Safari/537.36

Steps to reproduce:

  1. Right-mouse button click on any folder.
  2. Choose either "New Subfolder..." or "Rename".

Actual results:

Nothing happens.

Expected results:

Either a folder would have been created or the clicked folder name field would have been open to be renamed. I didn't test the "Delete" function.

I tested with 128.0.1esr and with Daily 130.0a1 (2024-08-01) and got the same results.

Is there a new setting somewhere that is not allowing me to create folders?

Hello,

Managed to reproduce this issue using TB 128.1.0esr(20240730200333), 128.0.1esr(20240717233102) and 130.0a1(20240801104821) on macOS 14.

However It does not reproduce all the time, I managed to reproduce it 1 out of 5 times. The problem with rename/create folders seems to affect IMAP accounts. If create/rename folders did not succeed, going in Troubleshoot mode the folder created/renamed are displayed.

I tried the STR above with an POP account and I did not managed to reproduce it.

Status: UNCONFIRMED → NEW
Ever confirmed: true

As an FYI, I can't create folders in either POP3 or IMAP, or in the "Local Folders" area.

Blocks: tb128found
Severity: -- → S3
Priority: -- → P2

Anje can you reproduce?

Component: Untriaged → Folder and Message Lists
Flags: needinfo?(anjeyelf)

Reporter, please check Tools > Developer Tools > Console for error messages related to these failed actions

Flags: needinfo?(carodri2)

Rename and create subfolder works consistently for me on self-built daily (129.a1) on imap on linux. Also works consistently on Local Folders.

Actual results:
Nothing happens.

Reporter, are you seeing a prompt to enter a folder name to be created or to be renamed? I think you are, but not sure.

Windows 10 OS
Thunderbird beta 129.0b6
Right click on Imap folder called 'go' and select 'Rename'
Pop up window opens to rename folder.

I entered new name as INS Docs and clicked on 'Rename'

first attempt got a notification that server failed to do something - sorry I accidentally deleted it before I could get a screendump and not all the notification displays - it's partially hidden and now it displays in Windows Notification area which does not seem to offer any means of copying. Click in that area and it's always deleted.
But I did find this in the Activity Manager which sounds similar and did occur at same time.
"The current command did not succeed. The mail server for account - name @gmail.com responded: [CANNOT] Folder contains excess whitespace (Failure)"

second attempt worked perfectly.

Flags: needinfo?(anjeyelf)

Activity Manager

I renamed a folder in 'Local Folders' account
folder called 'Test me for sort' to 'test folder'
No problems.

In a gmail imap account
First attempt at 1:30pm to rename failed.
Second attempt at 1:32PM to rename succeeded
......but seems to perform two actions:

  1. delete the original folder called 'go'
  2. and then rename 'go' to 'INS Docs'

Should it be performing a deletion and then renaming same folder ? I did not expect to see that hence thought I should mention it.

(In reply to Wayne Mery (:wsmwk) from comment #4)

Reporter, please check Tools > Developer Tools > Console for error messages related to these failed actions

Thunderbird 128.0.1esr, from the Console, when I RMB on the folder:

13:23:41.789 Uncaught NS_ERROR_FAILURE: Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsISpamSettings.spamFolderURI]
canRenameDeleteJunkMail resource:///modules/FolderUtils.sys.mjs:367
getCommandState chrome://messenger/content/about3Pane.js:467
<anonymous> chrome://messenger/content/about3Pane.js:6253
isCommandEnabled chrome://messenger/content/mailCommon.js:457
updatePopupCommandStates chrome://messenger/content/about3Pane.js:541
updatePopupForSingleSelection chrome://messenger/content/about3Pane.js:567
onPopupShowing chrome://messenger/content/about3Pane.js:531
handleEvent chrome://messenger/content/about3Pane.js:320
_onContextMenu chrome://messenger/content/about3Pane.js:2898
handleEvent chrome://messenger/content/about3Pane.js:1713
FolderUtils.sys.mjs:367

When I click "Rename":

13:23:52.550 Uncaught NS_ERROR_FAILURE: Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsISpamSettings.spamFolderURI]
canRenameDeleteJunkMail resource:///modules/FolderUtils.sys.mjs:367
getCommandState chrome://messenger/content/about3Pane.js:467
<anonymous> chrome://messenger/content/about3Pane.js:6278
isCommandEnabled chrome://messenger/content/mailCommon.js:457
doCommand chrome://messenger/content/mailCommon.js:711
triggerCommand chrome://messenger/content/about3Pane.js:853
onCommand chrome://messenger/content/about3Pane.js:837
handleEvent chrome://messenger/content/about3Pane.js:326
FolderUtils.sys.mjs:367

When I click "New Subfolder ...":
13:25:43.478 Uncaught NS_ERROR_FAILURE: Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsISpamSettings.spamFolderURI]
canRenameDeleteJunkMail resource:///modules/FolderUtils.sys.mjs:367
getCommandState chrome://messenger/content/about3Pane.js:467
<anonymous> chrome://messenger/content/about3Pane.js:6253
isCommandEnabled chrome://messenger/content/mailCommon.js:457
doCommand chrome://messenger/content/mailCommon.js:711
triggerCommand chrome://messenger/content/about3Pane.js:853
onCommand chrome://messenger/content/about3Pane.js:837
handleEvent chrome://messenger/content/about3Pane.js:326
FolderUtils.sys.mjs:367

Flags: needinfo?(carodri2)

(In reply to gene smith from comment #5)

Rename and create subfolder works consistently for me on self-built daily (129.a1) on imap on linux. Also works consistently on Local Folders.

Actual results:
Nothing happens.

Reporter, are you seeing a prompt to enter a folder name to be created or to be renamed? I think you are, but not sure.

No prompts at all.

Five people at https://support.mozilla.org/en-US/questions/1457371 state having trouble creating new folders.

See Also: → 791467

The nsISpamSettings.spamFolderURI error would explain why the dialog doesn't come up.
It's possible that's not the full story. When I test it, after a while I was able to get an error (imap). My hunch is there was a delay and the UI was using a folder URI that was out of date.

@cardodri2: can you go to the settings, look for about:config, then find what value you have for spamActionTargetFolder and spamActionTargetAccount - take note of them. Reset them one with restart in between to find out which one is causing an issue.

I've been asking people to help find out what is going on in their versions of Thunderbird to find a common setting being seen by people with this issue.

In Support Forum - Two people have been kind enough to respond, provide information and modify settings.
https://support.mozilla.org/en-US/questions/1457371

Description of findings:
There was a common issue.

  • In Account Settings for various accounts, pop, imap and Local Folders
  • In Junk Settings for all accounts.
  • They had this selected : checkbox 'Enable adaptive junk mail controls for this account'

But under 'Destination & Retention'

  • For all accounts this was NOT selected - checkbox 'Move new junk messages to'
  • So nothing was selected in this section for any account.

Check Preferences

  • In Settings > General
  • Scroll to bottom and click on 'Config Editor'
  • In search type: spamAction

Noticed another common issue:
The 'server2' is used by Local Folders.

Actual Settings
The TargetAccount was incorrectly pointing to a previously removed/deleted mail account - in one case a pop verizon account in the other it was a imap gmx account.
The TargetFolder was correctly pointing to 'Local Folders'.
eg:

  • mail.server.server2.spamActionTargetAccount mailbox://name@pop.verizon.net
  • mail.server.server2.spamActionTargetFolder mailbox://nobody@Local%20Folders/Junk

Expected Setting

  • mail.server.server2.spamActionTargetAccount mailbox://nobody@Local%20Folders
  • mail.server.server2.spamActionTargetFolder mailbox://nobody@Local%20Folders/Junk

Action which seems to Fix issue
I asked people to do this:
In Account Settings:
For all accounts select the checkbox 'Move new junk messages to' and select where to move them -
examples:

  • Select Junk Settings' for pop gmail account
  • Select checkbox 'Move new junk messages to'
  • Select 'Junk folder on - gmail email address pop account.
  • Select Junk Settings' for imap gmail account
  • Select checkbox 'Move new junk messages to'
  • Select 'Other' and - gmail email address imap account.
  • Select Junk Settings' for 'Local Folders' mail account
  • Select checkbox 'Move new junk messages to'
  • Select 'Junk folder on - Local Folders

Restart Thunderbird and check Config Editor
People now see this for the 'server2' - which is now correct

  • mail.server.server2.spamActionTargetAccount mailbox://nobody@Local%20Folders
  • mail.server.server2.spamActionTargetFolder mailbox://nobody@Local%20Folders/Junk

Now when they attempt to create folder/subfolder - it works.

Whilst it seems there is a way for users to fix the problem, it does not explain why all accounts Junk Settings for 'Move message....' were disabled - was it Thunderbird or user ?
Nor why preferences for the server used by Local Folders had a TargetAccount for a deleted/removed account.

Hope info is of some use.

(In reply to Anje from comment #12)

I've been asking people to help find out what is going on in their versions of Thunderbird to find a common setting being seen by people with this issue.

In Support Forum - Two people have been kind enough to respond, provide information and modify settings.
https://support.mozilla.org/en-US/questions/1457371

Description of findings:
There was a common issue.

  • In Account Settings for various accounts, pop, imap and Local Folders
  • In Junk Settings for all accounts.
  • They had this selected : checkbox 'Enable adaptive junk mail controls for this account'

But under 'Destination & Retention'

  • For all accounts this was NOT selected - checkbox 'Move new junk messages to'
  • So nothing was selected in this section for any account.

Check Preferences

  • In Settings > General
  • Scroll to bottom and click on 'Config Editor'
  • In search type: spamAction

Noticed another common issue:
The 'server2' is used by Local Folders.

Actual Settings
The TargetAccount was incorrectly pointing to a previously removed/deleted mail account - in one case a pop verizon account in the other it was a imap gmx account.
The TargetFolder was correctly pointing to 'Local Folders'.
eg:

  • mail.server.server2.spamActionTargetAccount mailbox://name@pop.verizon.net
  • mail.server.server2.spamActionTargetFolder mailbox://nobody@Local%20Folders/Junk

Expected Setting

  • mail.server.server2.spamActionTargetAccount mailbox://nobody@Local%20Folders
  • mail.server.server2.spamActionTargetFolder mailbox://nobody@Local%20Folders/Junk

Action which seems to Fix issue
I asked people to do this:
In Account Settings:
For all accounts select the checkbox 'Move new junk messages to' and select where to move them -
examples:

  • Select Junk Settings' for pop gmail account
  • Select checkbox 'Move new junk messages to'
  • Select 'Junk folder on - gmail email address pop account.
  • Select Junk Settings' for imap gmail account
  • Select checkbox 'Move new junk messages to'
  • Select 'Other' and - gmail email address imap account.
  • Select Junk Settings' for 'Local Folders' mail account
  • Select checkbox 'Move new junk messages to'
  • Select 'Junk folder on - Local Folders

Restart Thunderbird and check Config Editor
People now see this for the 'server2' - which is now correct

  • mail.server.server2.spamActionTargetAccount mailbox://nobody@Local%20Folders
  • mail.server.server2.spamActionTargetFolder mailbox://nobody@Local%20Folders/Junk

Now when they attempt to create folder/subfolder - it works.

Whilst it seems there is a way for users to fix the problem, it does not explain why all accounts Junk Settings for 'Move message....' were disabled - was it Thunderbird or user ?
Nor why preferences for the server used by Local Folders had a TargetAccount for a deleted/removed account.

Hope info is of some use.

Thank you so much. This worked. I had to assign junk control settings and junk folders to all of my accounts (not just a few ones). After I did this and restarted Thunderbird, the renaming and adding of folders worked. I went back and unselected the junk control settings/folders for those extra accounts that I didn't want to have junk control, and the renaming/adding folders operation still worked.

(In reply to Magnus Melin [:mkmelin] from comment #11)

The nsISpamSettings.spamFolderURI error would explain why the dialog doesn't come up.
It's possible that's not the full story. When I test it, after a while I was able to get an error (imap). My hunch is there was a delay and the UI was using a folder URI that was out of date.

@cardodri2: can you go to the settings, look for about:config, then find what value you have for spamActionTargetFolder and spamActionTargetAccount - take note of them. Reset them one with restart in between to find out which one is causing an issue.

I'm sorry, I had not seen your message until now. I didn't make a note of the previous spam folder settings, but after I followed the procedure listed by Anje and the problem was solved. I also went back and unselected junk controls for those accounts that I didn't wish to have that setting on, and the renaming and creating subfolders dialogs came up as expected.

Now I'm curious to know why was this happening in the first place, since this was not an issue in older versions of Thunderbird.

Summary: "New Subfolder..." and "Rename" Do Not Work → "New Subfolder..." and "Rename" Do Not Work (since spamFolderURI/spamActionTargetFolder points to removed account)

Any idea what might be the regressing bug?

Seems probable that the failure is here: https://searchfox.org/comm-central/rev/84f76a1e2b0601289150a4622c3f530d278a743e/mailnews/base/src/nsSpamSettings.cpp#488
If so, maybe due to now invalid hostnames like for bug 1911951.

carodri2,
do you find this problems is gone in 128.2.3?

Flags: needinfo?(carodri2)
Depends on: 1911951

Wayne, I'm not having the issue anymore and I have now 128.2.3 installed, but I believe it is because I followed the procedure by Anje above. However, I'm not sure if, had I not done that, the problem would have been solved. Were there any changes to the code in 128.2.3 that would avoid the problem in the first place?

Flags: needinfo?(carodri2)

Anje's instructions can help workaround bug 1911951

Status: NEW → RESOLVED
Closed: 1 year ago
Duplicate of bug: 1911951
Resolution: --- → DUPLICATE

Shouldn't TB handle the situation "spamFolderURI/spamActionTargetFolder points to removed account" gracefully instead of causing obscure errors during a folder operation and requiring users to apply some manual clean-up?

Status: RESOLVED → REOPENED
No longer duplicate of bug: 1911951
Resolution: DUPLICATE → ---
Status: REOPENED → NEW

Doesn't bug 1911951 handle the user failure? As for obscure things in Error Console, I'd make a new bug.

Magnus, can you please answer comment 20? In the fix for bug 1911951 I don't see those SPAM setting being corrected.

Probably bug 1911951 likely doesn't make a difference. I had tried to mangle one of the spamFolderURI/spamActionTargetFolder prefs but that doesn't reproduce the error for me. So maybe there's some chance it would have an impact.

carodri2: still see this in 128.3.3 or later?

I don't see it in either 128.3.3. or in the latest Daily. Hopefully, we won't be seeing it again.

I am encountering the same problem in:
128.3.1esr and 128.4.1esr 10/31/24

Can you try comment 10?

Flags: needinfo?(mkmelin+mozilla)

"New Subfolder..." and "Rename" Did Not Work when spamFolderURI/spamActionTargetFolder points to removed account.

After enabling "move to junk" on an account and then while Thunderbird was closed corrupting the mail.server.server2.spamActionTarget pref, after startup spamsettings was erroring out.

Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED
Target Milestone: --- → 135 Branch

Pushed by rob@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/c2bd3b3e9972
Fix handling of spamsettings when spamActionTargetAccount is incorrect. r=tobyp

Status: ASSIGNED → RESOLVED
Closed: 1 year ago1 year ago
Resolution: --- → FIXED

Comment on attachment 9441291 [details]
Bug 1911225 - Fix handling of spamsettings when spamActionTargetAccount is incorrect. r=#thunderbird-back-end-reviewers

[Approval Request Comment]
Regression caused by (bug #): unknown
User impact if declined: may not be able to perform "new folder" or rename folder operations due to bad prefs
Testing completed (on c-c, etc.): c-c
Risk to taking this patch (and alternatives if risky): safe

Attachment #9441291 - Flags: approval-comm-esr128?
Attachment #9441291 - Flags: approval-comm-beta?

Comment on attachment 9441291 [details]
Bug 1911225 - Fix handling of spamsettings when spamActionTargetAccount is incorrect. r=#thunderbird-back-end-reviewers

[Triage Comment]
This will be included in today's merge of cc->comm-beta.

Attachment #9441291 - Flags: approval-comm-beta? → approval-comm-beta-

Comment on attachment 9441291 [details]
Bug 1911225 - Fix handling of spamsettings when spamActionTargetAccount is incorrect. r=#thunderbird-back-end-reviewers

[Triage Comment]
Approved for esr128

Attachment #9441291 - Flags: approval-comm-esr128? → approval-comm-esr128+
Flags: needinfo?(dick)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: