Bug 1911225 - Fix handling of spamsettings when spamActionTargetAccount is incorrect. r=tobyp

"New Subfolder..." and "Rename" Did Not Work when
spamFolderURI/spamActionTargetFolder points to removed account.

After enabling "move to junk" on an account and then while Thunderbird was
closed corrupting the mail.server.server2.spamActionTarget pref, after startup
spamsettings was erroring out.

Differential Revision: https://phabricator.services.mozilla.com/D230915

--HG--
extra : amend_source : 6f476d7ba5585fcc4bf0f6dbf01af2fe7e02dbb6